<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:adjustViewBounds="true"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical">

        <ImageView

            android:id="@+id/product_image"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/thumbnail_string">

        </ImageView>

        <TextView


            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name_string"
            android:ellipsize="end"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="24sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@+id/product_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView

            android:id="@+id/product_watering"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/some_field_string"
            android:textColor="?attr/colorSecondary"
            android:textSize="18sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/product_name"
            app:layout_constraintTop_toBottomOf="@+id/product_name">

        </TextView>

        <TextView

            android:id="@+id/product_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Description_string"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/product_watering"
            app:layout_constraintTop_toBottomOf="@+id/product_watering">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>